--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,3 +13,18 @@ h1 {
     font-family: "TitleFont";
     text-align: center;
 }
+
+@media (max-width: 768px) {  
+    h1 {font-size:3rem;}
+    p {font-size: 0.75rem;}
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {  
+    h1 {font-size:4rem;}
+    p {font-size: 0.7rem;}
+}
+
+@media (min-width: 1200px) {  
+    h1 {font-size:5rem;}
+    p {font-size: 1rem;}
+}
