--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,18 @@ h1 {
     text-align: center;
 }
 
+.date {
+    font-size: 0.8rem;
+}
+.name {
+    font-size: 0.8rem;
+}
+
+.footer {
+    text-align: center;
+    font-size: .7rem;
+}
+
 @media (max-width: 768px) {  
     h1 {font-size:3rem;}
     p {font-size: 0.75rem;}
