--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,17 +27,17 @@ h1 {
     font-size: .7rem;
 }
 
-@media (max-width: 768px) {  
-    h1 {font-size:3rem;}
-    p {font-size: 0.75rem;}
+@media (max-width: 768px) {  /* SM */
+    h1 {font-size: 4rem;}
+    p {font-size: 1rem;}
 }
 
-@media (min-width: 768px) and (max-width: 1200px) {  
-    h1 {font-size:4rem;}
-    p {font-size: 0.7rem;}
+@media (min-width: 768px) and (max-width: 1200px) {  /* MD */
+    h1 {font-size: 5rem;}
+    p {font-size: 1rem;}
 }
 
-@media (min-width: 1200px) {  
-    h1 {font-size:5rem;}
+@media (min-width: 1200px) {  /* XL */
+    h1 {font-size: 6rem;}
     p {font-size: 1rem;}
 }
